@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2009-2013  Christian Heckendorf <heckendorfc@gmail.com>
+ *  Copyright (C) 2009-2014  Christian Heckendorf <heckendorfc@gmail.com>
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -103,7 +103,9 @@ unsigned int dbInit(){
 			sqlite3_close(conn);
 			return 0;
 		}
-		fprintf(stderr,"Please add any installed plugins to the database with harp -a\n");
+		if(autoAddPlugins()!=HARP_RET_OK){
+			fprintf(stderr,"Automatic plugin loading failed.\nPlease add any installed plugins to the database with harp -a\n");
+		}
 	}
 	return 1;
 }
