@@ -2,6 +2,7 @@ Changes in HARP-0.6.0:
 - Moved to GitHub
 - Replaced mp4ff with new MP4 parsing library for AAC
 - Replaced autotools with cmake
+- Plugins are automatically added when a new database is created
 
 Changes in HARP-0.5.3:
 - Changed shuffle function to avoid predictable results.
